--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "BSD-3-Clause"
 [tool.poetry.dependencies]
 python = "^3.7"
 attrs = "^18.2"
+networkx = "^2.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.2"
