--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "BSD-3-Clause"
 python = "^3.7"
 attrs = "^18.2"
 networkx = "^2.2"
+more-itertools = "^4.3"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.2"
